--- a/LivroMente_FRONT/src/app/Views/cadastro-vendedor/cadastro-vendedor.component.html
+++ b/LivroMente_FRONT/src/app/Views/cadastro-vendedor/cadastro-vendedor.component.html
@@ -3,7 +3,7 @@
       <div class="welcome-text">
         <div class="text">
           Seja <span>Bem Vindo(a)!</span>
-          <p>Faça seu cadastro para ter acesso.</p>
+          <p>Cadastre seus livros</p>
         </div>
       </div>
       <div class="image">
@@ -12,7 +12,7 @@
     </div>
     <div class="form-input">
       <div class="input-box">
-        <p class="title">Cadastrar-se</p>
+        <p class="title">Cadastrar-se como Vendedor</p>
         <form class="register" (ngSubmit)="onSubmit()" #form="ngForm">
           <input
             class="inputNS"
