--- a/LivroMente_FRONT/src/app/Views/components/header/header.component.html
+++ b/LivroMente_FRONT/src/app/Views/components/header/header.component.html
@@ -1,10 +1,14 @@
 <section class="header">
   <div class="header_nav">
     <div class="logo"><img src="..\assets\Logo.png" alt="logo" /></div>
-    <div class="div"></div>
+    <div class="nav-bar">
+      <a href="carrinho">Carrinho</a>
+      <a href="cadastroVendedor">Vendedor</a>
+      <a href="upload">Cadastro de Livro</a>
+    </div>
     <div class="buttons">
-      <button class="signin">Sign in</button>
-      <button class="signup">Sign up</button>
+      <a href="login"><button class="signin">Sign in</button></a>
+      <a href="cadastroCliente"><button class="signup">Sign up</button></a>
     </div>
   </div>
 </section>
