--- a/LivroMente_FRONT/src/app/Views/cadastro-vendedor/cadastro-vendedor.component.css
+++ b/LivroMente_FRONT/src/app/Views/cadastro-vendedor/cadastro-vendedor.component.css
@@ -8,48 +8,50 @@
       Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     overflow: hidden;
   }
-  
-  .text { 
+
+  .text {
     font-size: 30px;
     font-weight: 650;
     text-transform: capitalize;
     margin-top: 8vw;
+    width: 15em;
+    line-height: 10px;
   }
-  
+
   span {
     color: #849a8a;
   }
-  
+
   form {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
   }
-  
+
   .left-side {
     margin-left: 5vw;
   }
-  
+
   .image {
     margin-top: 10vh;
     z-index: 2;
     max-width: 500px;
     max-height: 500px;
   }
-  
+
   .image img {
     z-index: 2;
     width: 100%;
     height: 100%;
   }
-  
+
   .welcome-text {
     position: absolute;
     z-index: 3;
     line-height: 2vh;
   }
-  
+
   .form-input{
     display: flex;
     justify-content: center;
@@ -59,11 +61,11 @@
     height: 100%;
     box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.468);
   }
-  
+
   /* .input-box{
-  
+
   } */
-  
+
   .inputNS{
     padding-left: 10px;
     border-radius: 7px;
@@ -72,7 +74,7 @@
     height: 50px;
     margin-bottom: .5em;
   }
-  
+
   .title{
     color: white;
     font-size: 30px;
@@ -80,22 +82,22 @@
     margin: 3vh 0 3vh 0;
     justify-self: flex-start;
   }
-  
+
   .buttonregister{
     color: black;
     font-weight: 700;
     font-size: 15px;
     margin-top: 2.5vh;
     background-color: white;
-    padding: 1vw; 
+    padding: 1vw;
     border-radius: 10px;
     border: 0 solid;
   }
-  
+
   .login-text{
     font-weight: 600;
   }
-  
-  .gotologin{ 
+
+  .gotologin{
     color: white;
   }
