--- a/LivroMente_FRONT/src/app/Views/home/home.component.html
+++ b/LivroMente_FRONT/src/app/Views/home/home.component.html
@@ -39,7 +39,7 @@
       </div>
       <div class="product-slider">
         <div class="slider-title">
-          Livros Grátis
+          Livros
         </div>
         <div class="product">
           <ng-container *ngFor="let book of Books">
