--- a/LivroMente_FRONT/src/app/Views/cadastro-livro/cadastro-livro.component.html
+++ b/LivroMente_FRONT/src/app/Views/cadastro-livro/cadastro-livro.component.html
@@ -1,43 +1,4 @@
-<header class="menu">
-  <ul>
-    <a href="home"
-      ><img
-        class="pequena"
-        style="
-          width: 80px;
-          height: 80px;
-          left: 50px;
-          top: 6px;
-          position: absolute;
-          border-radius: 306px;
-          backdrop-filter: blur(4px);
-        "
-        src="assets/Logo.png"
-    /></a>
-    <div
-      style="
-        width: 310px;
-        left: 144px;
-        top: 20px;
-        position: absolute;
-        color: #82a8d9;
-        font-size: 40px;
-        font-family: Glory;
-        font-weight: 200;
-        word-wrap: break-word;
-      "
-    >
-      Livro&Mente
-    </div>
-    <li><a href="home">Home</a></li>
-    <li><a href="livros">Livros</a></li>
-    <li><a href="cadastro-livro">Venda</a></li>
-    <li><a href="dominio">Livros Grátis</a></li>
-    <li><a href="categoria">Categoria</a></li>
-    <li><a href="carrinho">Carrinho</a></li>
-    <div class="bnt-login">Login</div>
-  </ul>
-</header>
+<app-header></app-header>
 
   <div class="page-top">
     <div class="text">
@@ -140,13 +101,16 @@
             required
           />
         </div>
-        <!-- <div class="input-box">
-          <span class="details">Estado do livro:</span>
-          <select name="estado" id="estado">
-            <option value="1">Novo</option>
-            <option value="2">Usado</option>
-          </select>
-        </div> -->
+         <div class="input-box">
+          <span class="details">Coloque uma URL</span>
+          <input
+          type="text"
+          placeholder="Digite a url do livro"
+          name="UrlBook"
+          [(ngModel)]="book.UrlBook"
+          required
+        />
+        </div>
         <div class="input-box">
            <span class="details">Gênero do livro:</span>
            <select name="genero" [(ngModel)]="book.CategoryId"  >
