--- a/LivroMente_FRONT/src/app/Views/components/header/header.component.html
+++ b/LivroMente_FRONT/src/app/Views/components/header/header.component.html
@@ -1,6 +1,6 @@
 <section class="header">
   <div class="header_nav">
-    <div class="logo"><img src="..\assets\Logo.png" alt="logo" /></div>
+    <a href="" class=""><div class="logo"><img src="..\assets\Logo.png" alt="logo" /></div></a>
     <div class="nav-bar">
       <a href="carrinho">Carrinho</a>
       <a href="cadastroVendedor">Vendedor</a>
