--- a/LivroMente_FRONT/src/app/Views/detail/detail.component.html
+++ b/LivroMente_FRONT/src/app/Views/detail/detail.component.html
@@ -24,7 +24,7 @@
             <p>{{Book.synopsis}}</p>
             <div class="option-button" >
               <button *ngIf="livroGratis()">t</button>
-                <button class="add-to-cart"  *ngIf="botaoCarrinho">Adicionar ao Carrinho</button>
+                <button class="add-to-cart"  *ngIf="botaoCarrinho" (click)="comprar(Book)">Adicionar ao Carrinho</button>
                 <button class="buy" *ngIf="botaoComprar">Comprar</button>
                 <a href="{{Book.urlBook}}" target="_blank" id="idDoBotao" *ngIf="botaoGratis"><button  class="add-to-cart" >Abrir link</button></a>
             </div>
