--- a/LivroMente_FRONT/src/app/Views/pagamento/pagamento.component.html
+++ b/LivroMente_FRONT/src/app/Views/pagamento/pagamento.component.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tela de Pagamento</title>
-</head>
+
+<section class="header">
+  <div class="header_nav">
+    <a href="" class=""><div class="logo"><img src="..\assets\Logo.png" alt="logo" /></div></a>
+  </div>
+</section>
 <body>
+  <img class="img-pequena" src="..\assets\meninalendo.png" alt="">
   <div class="payment-container">
     <div class="payment-header">
       <h2>Detalhes do Pagamento</h2>
@@ -35,5 +35,4 @@
 
   </div>
 </body>
-</html>
 
