--- a/LivroMente_FRONT/src/app/Views/pagamento/pagamento.component.css
+++ b/LivroMente_FRONT/src/app/Views/pagamento/pagamento.component.css
@@ -9,7 +9,6 @@
 
 body {
   font-family: 'Arial', sans-serif;
-  background-color: #f4f4f4;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -18,7 +17,7 @@ body {
 }
 
 .payment-container {
-  background-color: #fff;
+  background-color: rgba(255, 255, 255, 0.701);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
   width: 500px;
@@ -59,7 +58,7 @@ input {
 }
 
 .pay-button {
-  background-color: #4caf50;
+  background-color: #849A8A;
   color: #fff;
   padding: 10px;
   border: none;
@@ -70,10 +69,95 @@ input {
 }
 
 .pay-button:hover {
-  background-color: #45a049;
+  background-color: #455048;
 }
 
 .error-message{
   color: #ff0000;
   margin-top: 10px;
+}
+
+.header_nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 5em;
+  border-bottom: 1px solid black;
+  box-shadow: 1px 1px 10px -5px black;
+}
+
+.div{
+  width: 100px;
+}
+
+.logo {
+  height: 100%;
+}
+
+.logo img {
+  width: 9 em;
+  height: 2em;
+}
+
+.signin {
+  font-size: 10px;
+  font-weight: 800;
+  background-color: transparent;
+  border: 0px;
+  margin-right: 18px;
+  cursor: pointer;
+}
+
+.signin:hover {
+  transform: scale(1.1, 1.2) translate(0%, -5%);
+  transition: 80ms;
+}
+
+.signin:active {
+  transform: scale(1, 1);
+  transition: 80ms;
+}
+
+.signup {
+  cursor: pointer;
+  width: 70px;
+  height: 30px;
+  font-size: 10px;
+  font-weight: 800;
+  background-color: #849a8a;
+  color: #ffff;
+  border-radius: 5px;
+  border: 0;
+  transition: outline 0.15s;
+}
+
+.signup:hover {
+  outline: 3px solid rgba(132, 154, 138, 0.2);
+  background: rgb(109, 130, 115);
+  transition: 0.2s;
+}
+
+.signup:active {
+  background: #425146;
+}
+
+.nav-bar{
+  font-weight: 800;
+  font-size: 15px;
+  display: flex;
+  cursor: pointer;
+  gap: 1em;
+  & a{
+    text-decoration: none;
+    color: #000;
+  }
+}
+.nav-bar a:hover{
+  color: #425146;
+  transform: scale(110%);
+}
+.img-pequena{
+  width: 50%;
+  height: 90%;
+
 }
