--- a/LivroMente_FRONT/src/app/Views/detail/detail.component.css
+++ b/LivroMente_FRONT/src/app/Views/detail/detail.component.css
@@ -86,22 +86,22 @@ select selected {
   color: black;
 }
 
-.product-info p {
+.product-info  p{
   width: 100%;
   height: 100px;
   margin-top: 20px;
   text-align: justify;
 
   /* Propriedades gerais para controle de texto */
-  overflow: hidden;
+  /* overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  max-width: 25em;
+  max-width: 25em; */
 
   /* Propriedades específicas do WebKit para limitar o número de linhas */
   /* display: -webkit-box; */
-  -webkit-line-clamp: 4;
-  -webkit-box-orient: vertical;
+  /* -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical; */
 }
 
 .option-button {
