--- a/LivroMente_FRONT/src/app/views/home/home.component.html
+++ b/LivroMente_FRONT/src/app/views/home/home.component.html
@@ -9,7 +9,6 @@
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro, eveniet omnis aliquam delectus quam in suscipit voluptate, soluta laboriosam amet ducimus, laborum quas debitis eum dolore dignissimos dolor. Consequuntur, quae.</p>
       </div>
       <div class="top-buttons">
-
       </div>
     </div>
     <div class="right-content">
@@ -23,7 +22,7 @@
           Romance
         </div>
         <div class="product">
-          <ng-container *ngFor="let book of Books">
+          <ng-container *ngFor="let book of romanceBooks">
             <div class="product-card">
               <div class="product-slider-image">
                 <img src="{{book.urlImg}}" alt="" class="product-card-image">
@@ -67,39 +66,7 @@
       <div class="left-card"></div>
       <div class="right-card"></div>
     </div>
-    <div class="product-filter">
-      <div class="filter">
-        <span class="general-text">Outros livros</span>
-        <div class="main-filter-body">
-          <div class="filter-checkbox">
-            <div class="filter-range">
-              <!-- <div class="range-title">Preço</div>
-              <div class="range-input">
-                <input type="range" id="range-1">
-                <label for="range-1" class="range-label">aa</label>
-              </div> -->
-            </div>
-          </div>
-          <div class="product-filter-display">
-            <ng-container *ngFor="let book of Books">
-              <div class="product-filter-card">
-                <div class="product-filter-card-image">
-                  <img src="{{book.urlImg}}" alt="" class="filter-card-image">
-                </div>
-                <div class="product-filter-card-info">
-                  <a href="/detalhe" class="product-card-name" (click)="abrirProduto()">{{book.title}}</a>
-                  <div class="product-rate">5,0 <svg xmlns="http://www.w3.org/2000/svg" height="9" width="10" viewBox="0 0 576 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.--><path fill="#000000" d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"/></svg><svg xmlns="http://www.w3.org/2000/svg" height="9" width="10" viewBox="0 0 576 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.--><path fill="#000000" d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"/></svg><svg xmlns="http://www.w3.org/2000/svg" height="9" width="10" viewBox="0 0 576 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.--><path fill="#000000" d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"/></svg><svg xmlns="http://www.w3.org/2000/svg" height="9" width="10" viewBox="0 0 576 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.--><path fill="#000000" d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"/></svg><svg xmlns="http://www.w3.org/2000/svg" height="9" width="10" viewBox="0 0 576 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.--><path fill="#000000" d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"/></svg></div>
-                  <div class="product-card-price">
-                    <ng-container *ngIf="book.value === 0">Grátis</ng-container>
-                    <ng-container *ngIf="book.value !== 0">R${{ book.value | number: '1.2-2' }}</ng-container>
-                  </div>
-                </div>
-              </div>
-            </ng-container>
-          </div>
-        </div>
-      </div>
-    </div>
+    <app-category-filter></app-category-filter>
   </div>
 </main>
 
