--- a/LivroMente_FRONT/src/app/views/painel-adm/painel-adm.component.html
+++ b/LivroMente_FRONT/src/app/views/painel-adm/painel-adm.component.html
@@ -1,14 +1,5 @@
+<section><app-menu-adm></app-menu-adm></section>
 <body>
-    <div class="sidebar">
-        <img src="assets/Logo.png" alt="Menu Image">
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Livros</a></li>
-            <li><a href="#">?</a></li>
-            <li><a href="#">?</a></li>
-        </ul>
-    </div>
-
     <div class="page-top">
         <div class="left-content">
           <div class="main-text">
