--- a/LivroMente_FRONT/src/styles.css
+++ b/LivroMente_FRONT/src/styles.css
@@ -22,3 +22,6 @@ body{
   background: #6A7B6F;
   border-radius: 10px;
 }
+
+/* html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; } */
