--- a/LivroMente_FRONT/src/app/views/painel-adm/painel-adm.component.css
+++ b/LivroMente_FRONT/src/app/views/painel-adm/painel-adm.component.css
@@ -5,6 +5,18 @@ body {
     display: flex;
 }
 
+.example-card {
+    max-width: 240px;
+    max-height: 200px;
+    margin-bottom: 20px;
+    left: 40%;
+    top:-40%;
+  }
+  
+  .example-card-footer {
+    padding: 16px;
+  }
+
 .sidebar {
     width: 250px;
     height: 100vh;
