user refac front

--- a/LivroMente_FRONT/src/app/views/components/footer/footer.component.html
+++ b/LivroMente_FRONT/src/app/views/components/footer/footer.component.html
@@ -1,8 +1,13 @@
 <section class="footer">
-    <div class="footer-info">
-        
-    </div>
-    <div class="footer-social">
-        
-    </div>
+    <footer>
+        <div class="footer-content">
+          <div class="footer-links">
+            <a href="#">Sobre</a>
+            <a href="#">Contato</a>
+          </div>
+          <div class="footer-copyright">
+            © 2024 Livro&Mente. Todos os direitos reservados.
+          </div>
+        </div>
+      </footer>
 </section>
