--- a/LivroMente_FRONT/src/app/views/components/header/header.component.html
+++ b/LivroMente_FRONT/src/app/views/components/header/header.component.html
@@ -7,6 +7,7 @@
       <a href="upload">Cadastro de Livro</a>
     </div>
     <div class="buttons">
+      <a href="painel"><button class="signin">Painel</button></a>
       <a href="login"><button class="signin">Sign in</button></a>
       <a href="cadastroCliente"><button class="signup">Sign up</button></a>
     </div>
