--- a/LivroMente_FRONT/src/app/views/components/footer/footer.component.css
+++ b/LivroMente_FRONT/src/app/views/components/footer/footer.component.css
@@ -1,7 +1,38 @@
-.footer{
-    background-color: black;
-    width: 100%;
-    height: 10em;
-    bottom: 0;
-    
-}
+footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #849a8a; /* Cor personalizada */
+    font-family: 'Poppins', sans-serif;
+    color: white;
+    padding: 2em;
+    margin-top: 5em;
+    text-align: center;
+  }
+  
+  .footer-content {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+    max-width: 1000px;
+  }
+  
+  .footer-links {
+    display: flex;
+    gap: 2em;
+  }
+  
+  .footer-links a {
+    color: white;
+    text-decoration: none;
+    font-weight: 200;
+  }
+  
+  .footer-links a:hover {
+    text-decoration: underline;
+  }
+  
+  .footer-copyright {
+    font-size: 0.8em;
+  }
