--- a/LivroMente_FRONT/src/app/views/carrinho/carrinho.component.html
+++ b/LivroMente_FRONT/src/app/views/carrinho/carrinho.component.html
@@ -10,9 +10,7 @@
                            <tr>
                             <th>Produto</th>
                             <th>Preço</th>
-                            <th>Quantidade</th>
-                            <th>Total</th>
-                            <th>-</th>
+                            
                            </tr>
                         </thead>
                         <tbody>
@@ -29,12 +27,10 @@
                                 <td>R$ {{book.value}}</td>
                                 <td>
                                     <div class="quantity">
-                                        <button (click)="diminuirQuantidade()">-</button>
-                                        <span>{{ total }}</span>
-                                        <button (click)="aumentarQuantidade()">+</button>
+                                    
                                     </div>
                                 </td>
-                                <td>R$ 100,00</td>
+                               
                                 <td>
                                     <button class="remove" (click)="remover(book)"><i class='bx bx-x'></i></button>
                                 </td>
@@ -47,11 +43,11 @@
                     <!-- <header></header> -->
                     <div class="info">
                         <div><span>Sub-total</span><span>R$ {{totalGeral}}</span></div>
-                        <div><span>Frete</span><span>Gratuito</span></div>
+                      
                     </div>
                     <footer></footer>
                 </div>
-                <a href="pagamento"><button class="box-button" (click)="comprar()">Finalizar Compra</button></a>
+                <button class="box-button" (click)="comprar()">Finalizar Compra</button>
             </aside>
             </div>
         </main>
