--- a/LivroMente_FRONT/src/app/views/painel-adm/painel-adm.component.html
+++ b/LivroMente_FRONT/src/app/views/painel-adm/painel-adm.component.html
@@ -2,9 +2,9 @@
     <div class="sidebar">
         <img src="assets/Logo.png" alt="Menu Image">
         <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="/painel">Home</a></li>
             <li><a href="#">Livros</a></li>
-            <li><a href="#">?</a></li>
+            <li><a href="/pedidos">Pedidos</a></li>
             <li><a href="#">?</a></li>
         </ul>
     </div>
