--- a/LivroMente_FRONT/src/app/views/admin/book/book.component.html
+++ b/LivroMente_FRONT/src/app/views/admin/book/book.component.html
@@ -11,49 +11,52 @@
 
 <div class="main-container">
     <div class="bread">
-        <p>Pedidos</p>
-        <button mat-mini-fab aria-label="Example icon button with a menu icon" >
-            <mat-icon>add</mat-icon>
+        <p>Livros</p>
+        <button mat-mini-fab aria-label="Example icon button with a menu icon">
+            <a href="/upload">
+                <mat-icon>add</mat-icon>
+            </a>
+            
         </button>
     </div>
     <main>
         
         <div class="mat-elevation-z8">
-            <table mat-table [dataSource]="orders" class="mat-table">
+            <table mat-table [dataSource]="books" class="mat-table">
 
                 <!-- Position Column -->
-                <ng-container matColumnDef="userId">
+                <ng-container matColumnDef="title">
                     <th mat-header-cell *matHeaderCellDef> Nome </th>
                     <td mat-cell *matCellDef="let element"> 
-                        {{ element.user?.completeName || 'Nome não disponível' }} 
+                        {{ element.title }} 
                         
                     </td>
                 </ng-container>
 
                 <!-- Name Column -->
-                <ng-container matColumnDef="date">
+                <ng-container matColumnDef="company">
                     <th mat-header-cell *matHeaderCellDef> Data </th>
-                    <td mat-cell *matCellDef="let element"> {{element.date | date : 'dd/MM/yyyy'}} </td>
+                    <td mat-cell *matCellDef="let element"> {{element.publishingCompany}} </td>
                 </ng-container>
 
                 <!-- Weight Column -->
-                <ng-container matColumnDef="valueTotal">
+                <ng-container matColumnDef="value">
                     <th mat-header-cell *matHeaderCellDef> Valor total </th>
-                    <td mat-cell *matCellDef="let element"> {{element.valueTotal | number: '1.2-2'}} </td>
+                    <td mat-cell *matCellDef="let element"> {{element.value | number: '1.2-2'}} </td>
                 </ng-container>
 
                 <!-- Symbol Column -->
                 <ng-container matColumnDef="status">
                     <th mat-header-cell *matHeaderCellDef> Status </th>
-                    <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+                    <td mat-cell *matCellDef="let element"> {{ element.isActive ? 'Ativo' : 'Desativo' }}  </td>
                 </ng-container>
 
                 <ng-container matColumnDef="acao">
                     <th mat-header-cell *matHeaderCellDef> Ações </th>
                     <td mat-cell *matCellDef="let element">
-                        <mat-icon color="primary" >visibility</mat-icon>
-                        <mat-icon  >edit</mat-icon>
-                        <mat-icon color="warn" >delete</mat-icon>
+                        <mat-icon color="primary"  disabled>visibility</mat-icon>
+                        <mat-icon  disabled>edit</mat-icon>
+                        <mat-icon color="warn"  disabled>delete</mat-icon>
                     </td>
                 </ng-container>
 
