--- a/LivroMente_FRONT/src/app/views/admin/orders/orders.component.html
+++ b/LivroMente_FRONT/src/app/views/admin/orders/orders.component.html
@@ -12,9 +12,6 @@
 <div class="main-container">
     <div class="bread">
         <p>Pedidos</p>
-        <button mat-mini-fab aria-label="Example icon button with a menu icon" >
-            <mat-icon>add</mat-icon>
-        </button>
     </div>
     <main>
         
@@ -51,9 +48,9 @@
                 <ng-container matColumnDef="acao">
                     <th mat-header-cell *matHeaderCellDef> Ações </th>
                     <td mat-cell *matCellDef="let element">
-                        <mat-icon color="primary" >visibility</mat-icon>
+                        <mat-icon color="primary"De (click)="getDetails(element.id)" >visibility</mat-icon>
                         <mat-icon  >edit</mat-icon>
-                        <mat-icon color="warn" >delete</mat-icon>
+                        <mat-icon color="warn" (click)="delete(element.id)">delete</mat-icon>
                     </td>
                 </ng-container>
 
