--- a/LivroMente_FRONT/src/app/views/admin/book/book.component.html
+++ b/LivroMente_FRONT/src/app/views/admin/book/book.component.html
@@ -12,10 +12,12 @@
 <div class="main-container">
     <div class="bread">
         <p>Livros</p>
-        <button mat-mini-fab aria-label="Example icon button with a menu icon">
-            <a href="/upload">
+
+        
+        <button mat-mini-fab aria-label="Example icon button with a menu icon" [routerLink]="['/upload']">
+            
                 <mat-icon>add</mat-icon>
-            </a>
+            
             
         </button>
     </div>
@@ -55,8 +57,10 @@
                     <th mat-header-cell *matHeaderCellDef> Ações </th>
                     <td mat-cell *matCellDef="let element">
                         <mat-icon color="primary"  disabled>visibility</mat-icon>
-                        <mat-icon  disabled>edit</mat-icon>
-                        <mat-icon color="warn"  disabled>delete</mat-icon>
+                        <mat-icon-button [routerLink]="['/upload', element.id]">
+                            <mat-icon>edit</mat-icon>
+                        </mat-icon-button>
+                        <mat-icon color="warn" (click)="delete(element.id)" >delete</mat-icon>
                     </td>
                 </ng-container>
 
