--- a/LivroMente_FRONT/src/app/views/login/login.component.html
+++ b/LivroMente_FRONT/src/app/views/login/login.component.html
@@ -19,7 +19,7 @@
           <button type="submit" class="buttonregister"  [disabled]="form.form.invalid" >Entrar</button>
           <div class="login-text">
             <p>
-              Não possui uma conta? <a href="/cadastroCliente" class="gotologin">Clique aqui.</a>
+              Não possui uma conta? <a href="/cadastro" class="gotologin">Clique aqui.</a>
             </p>
           </div>
         </form>
