--- a/LivroMente_FRONT/src/app/views/components/header/header.component.html
+++ b/LivroMente_FRONT/src/app/views/components/header/header.component.html
@@ -3,13 +3,11 @@
     <a href="" class=""><div class="logo"><img src="..\assets\Logo.png" alt="logo" /></div></a>
     <div class="nav-bar">
       <a href="carrinho">Carrinho</a>
-      <a href="cadastroVendedor">Vendedor</a>
-      <a href="upload">Cadastro de Livro</a>
     </div>
     <div class="buttons">
       <a href="painel"><button class="signin">Painel</button></a>
       <a href="login"><button class="signin">Sign in</button></a>
-      <a href="cadastroCliente"><button class="signup">Sign up</button></a>
+      <a href="cadastro"><button class="signup">Sign up</button></a>
     </div>
   </div>
 </section>
