mudanças na order

--- a/LivroMente_FRONT/src/app/views/cadastro-livro/cadastro-livro.component.html
+++ b/LivroMente_FRONT/src/app/views/cadastro-livro/cadastro-livro.component.html
@@ -7,7 +7,7 @@
       <span class="color">Vendedor</span>
       </div>
       <div class="description">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, alias excepturi porro dolores sed eum praesentium culpa quos adipisci repellat sint in velit fuga architecto. Commodi vero quaerat perferendis expedita.
+        Aqui, você encontra um espaço dedicado para cadastrar todos os seus livros com facilidade e agilidade. Simplificamos o processo para que você possa organizar e catalogar sua coleção de maneira rápida e eficiente, permitindo que os leitores encontrem seus títulos com facilidade.
       </div>
     </div>
     <div class="img">
