--- a/LivroMente_FRONT/src/app/views/components/header/header.component.html
+++ b/LivroMente_FRONT/src/app/views/components/header/header.component.html
@@ -2,12 +2,14 @@
   <div class="header_nav">
     <a href="" class=""><div class="logo"><img src="..\assets\Logo.png" alt="logo" /></div></a>
     <div class="nav-bar">
+      <a href="">Início</a>
       <a href="carrinho">Carrinho</a>
     </div>
     <div class="buttons">
       <a href="painel"><button class="signin">Painel</button></a>
       <a href="login"><button class="signin">Sign in</button></a>
       <a href="cadastro"><button class="signup">Sign up</button></a>
+      <a href="profile" class="profile"><fa-icon [icon]="faUserCircle" size="2x"></fa-icon></a>
     </div>
   </div>
 </section>
