--- a/LivroMente_FRONT/src/app/views/user-profile/user-profile.component.html
+++ b/LivroMente_FRONT/src/app/views/user-profile/user-profile.component.html
@@ -36,7 +36,7 @@
             <span class="bold">Order:</span> {{ order.id }} - {{ order.date | date: 'dd/MM/yyyy HH:mm'}}
           </div>
           <div class="order-status">
-            <span class="bold">{{ order.status }}</span>
+            <span class="bold">Approved</span>
           </div>
         </div>
         <div class="order-products">
