--- a/LivroMente_FRONT/src/app/views/product-display/product-display.component.css
+++ b/LivroMente_FRONT/src/app/views/product-display/product-display.component.css
@@ -51,13 +51,11 @@
 }
 
 .product-name {
+  color: black;
+  font-weight: 700;
+  text-decoration: none;
+  word-wrap: break-word;
   cursor: pointer;
-  font-size: 1em;
-  font-weight: 400;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  white-space: nowrap;
-  color: rgb(78, 78, 78);
 }
 
 .product-name:hover{
@@ -69,6 +67,8 @@
 }
 
 .product-price {
-  font-size: 1.1em;
-  font-weight: 600;
+  font-size: 25px;
+  color: #849a8a;
+  font-weight: 700;
+  margin-top: 5px;
 }
